--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
     "bootstrap": "^5.2.3",
+    "date-fns": "^3.3.1",
     "history": "^5.3.0",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
