--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-sidebar-ui": "^1.3.3",
+    "react-table": "^7.8.0",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
