--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.4.0",
     "react-pdf": "^7.7.1",
     "react-pro-sidebar": "^1.1.0",
     "react-responsive-carousel": "^3.2.23",
