--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "5.0.1",
     "react-sidebar-ui": "^1.3.3",
     "react-table": "^7.8.0",
+    "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
