--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "adj": "^0.0.1-beta.1",
+    "ajv": "^8.17.1",
     "axios": "^1.6.1",
     "bootstrap": "^5.2.3",
     "date-fns": "^3.3.1",
