--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
+    "sass-loader": "^16.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -67,6 +68,6 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.68.0"
+    "sass": "^1.79.4"
   }
 }
