--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.10",
+    "react-dropzone": "^14.2.10",
     "react-error-boundary": "^4.0.13",
     "react-loading-skeleton": "^3.4.0",
     "react-pdf": "^7.7.1",
