--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dropzone": "^14.2.10",
     "react-error-boundary": "^4.0.13",
     "react-loading-skeleton": "^3.4.0",
+    "react-paginate": "^8.2.0",
     "react-pdf": "^7.7.1",
     "react-pro-sidebar": "^1.1.0",
     "react-responsive-carousel": "^3.2.23",
