--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "axios": "^1.6.1",
     "bootstrap": "^5.2.3",
     "date-fns": "^3.3.1",
+    "file-saver": "^2.0.5",
     "history": "^5.3.0",
     "jquery": "^3.7.1",
+    "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
